# sportcalc

./: .gitignore  README.md  pyproject.toml
src/core/: __init__.py  execute.py  stats.py
src/core/cli/: parser.py  printer.py
src/corecalc/: __init__.py  conversions.py  exceptions.py  execute.py  stats.py
src/corecalc/cli/: parser.py  type_parsers.py
src/cycling/: __main__.py  cli.py  parser.py  paths.py  stats.py
src/cycling/cli/: parser.py  printer.py  templates.py  type_parsers.py
src/cycling/static/: results.template
src/cycling/stats/: conversion.py  stats.py
src/cyclingcalc/: __main__.py  parser.py  stats.py
src/cyclingcalc/static/: results.template
src/cyclingcalculator/: __main__.py  cli.py  stats.py
src/cyclingcalculator/cli/: inputs.template  parser.py  printer.py  results.template
src/cyclingcalculator/stats/: __init__.py  stats.py
src/running/: __main__.py  parser.py  stats.py
src/running/static/: results.template
src/runningcalc/: __main__.py  parser.py  stats.py
src/speedskatingcalc/: __main__.py  parser.py  stats.py
src/sportcalc/: __main__.py  running.py  walking.py
src/sportcalc/_core/: __init__.py  conversions.py  execute.py  stats.py
src/sportcalc/_core/cli/: parser.py  type_parsers.py
src/sportcalc/core/: __init__.py  conversions.py  exceptions.py  execute.py  stats.py
src/sportcalc/core/cli/: parser.py  type_parsers.py
src/sportcalc/cycling/: __init__.py  __main__.py  parser.py  stats.py
src/sportcalc/cycling/static/: __init__.py
src/sportcalc/implementations/: running.py  walking.py
src/sportcalc/implementations/cycling/: __init__.py  __main__.py  stats.py
src/sportcalc/implementations/speedskating/: __init__.py  __main__.py  stats.py
src/sportcalc/speedskating/: __init__.py  __main__.py  parser.py  stats.py
src/walkingcalc/: __main__.py  stats.py
test/test_corecalc/test_cli/: test_type_parsers.py
