[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "exercisecalc"
authors = [ {name = "BartSte"} ]
description = "A calculator for energy consumption during running and cycling."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["cycling", "running", "calculator", "statistics", "energy", "power", "calories", "kilojoules"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []
version = "0.0.1"

[project.scripts]
cycling = "cycling.__main__:main"
running = "running.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["core", "cycling", "running"]
