[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sportcalc"
authors = [ {name = "BartSte"} ]
description = "A calculator for energy consumption during running and cycling."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["cycling", "running", "calculator", "statistics", "energy", "power", "calories", "kilojoules"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["numpy"]
version = "0.1.0"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
cyclingcalc = "cyclingcalc.__main__:main"
runningcalc = "runningcalc.__main__:main"
walkingcalc = "walkingcalc.__main__:main"
speedskatingcalc = "speedskatingcalc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["corecalc", "cyclingcalc", "runningcalc"]
